scripts/bankDeplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gugu-bank-deployment
  namespace: gu9duck
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gugu-bank
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gugu-bank
      annotations:
        sidecar.istio.io/inject: "true" # Istio sidecar 주입
    spec:
      containers:
        - name: gugu-bank-container
          image: sungue/gugu-bank:f287269a07b066ddd5f88139cc043bd292162e02
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
