scripts/bankService.yaml
apiVersion: v1
kind: Service
metadata:
  name: gugu-bank-service
  namespace: gu9duck
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: gugu-bank
