scripts/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # Istio의 IngressGateway 사용함
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "a371d4adc18904c439e6256e5f95eaf3-232138546.ap-northeast-1.elb.amazonaws.com"
