scripts/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-service
  namespace: your-namespace
spec:
  hosts:
    - "*" # 또는 도메인 이름을 지정할 수 있습니다.
  gateways:
    - argocd-gateway
  http:
    - match:
        - uri:
            prefix: /login
      route:
        - destination:
            host: gugu-bank-service
            port:
              number: 80
